--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,20 +200,31 @@
         android:orientation="horizontal"
         android:weightSum="4">
         <Button
+            android:id="@+id/btDot"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            android:layout_weight="1"
+            android:textColor="#FFFFFF"
+            android:textSize="30dp"
+            android:text="."
+            android:layout_marginTop="1dp"
+            android:background="#FF252222" />
+        <Button
             android:id="@+id/btNumber0"
             android:layout_width="0dp"
             android:layout_height="90dp"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
-            android:text="0"
             android:layout_marginTop="1dp"
+            android:layout_marginLeft="1dp"
+            android:text="0"
             android:background="#FF252222" />
         <Button
             android:id="@+id/buttonEquals"
             android:layout_width="0dp"
             android:layout_height="90dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
             android:layout_marginTop="1dp"
