--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,31 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:weightSum="6"
     android:background="@android:color/black"
     tools:context="com.example.loan.mycalculator.MainActivity">
     <TextView
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="0dp"
         android:textColor="#FFFFFF"
         android:textSize="30dp" android:gravity="right"/>
     <!---button back và delete-->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
+        android:layout_weight="0.75"
         android:layout_marginBottom="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
         android:weightSum="3">
         <Button
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:background="#FF252222"
-            android:layout_marginBottom="5dp"/>
+            android:background="#FF252222" />
         <Button
             android:id="@+id/buttonBack"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="1dp"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
@@ -38,7 +40,7 @@
         <Button
             android:id="@+id/buttonDelete"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="1dp"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
@@ -48,14 +50,15 @@
     </LinearLayout>
     <!---nút 7,8,9 và phép chia-->
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         android:weightSum="4">
         <Button
             android:id="@+id/btNumber7"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -64,7 +67,7 @@
         <Button
             android:id="@+id/btNumber8"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -74,7 +77,7 @@
         <Button
             android:id="@+id/btNumber9"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -84,7 +87,7 @@
         <Button
             android:id="@+id/buttonDivide"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -94,14 +97,15 @@
     </LinearLayout>
     <!---4,5,6 button nhân -->
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         android:weightSum="4">
         <Button
             android:id="@+id/btNumber4"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -111,7 +115,7 @@
         <Button
             android:id="@+id/btNumber5"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -122,7 +126,7 @@
         <Button
             android:id="@+id/btNumber6"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -133,7 +137,7 @@
         <Button
             android:id="@+id/buttonMult"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -145,14 +149,15 @@
     </LinearLayout>
     <!---1,2,3 button trừ -->
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         android:weightSum="4">
         <Button
             android:id="@+id/btNumber1"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -162,7 +167,7 @@
         <Button
             android:id="@+id/btNumber2"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -173,7 +178,7 @@
         <Button
             android:id="@+id/btNumber3"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -184,7 +189,7 @@
         <Button
             android:id="@+id/buttonMinus"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -195,14 +200,15 @@
     </LinearLayout>
     <!---0, =, button cộng -->
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         android:weightSum="4">
         <Button
             android:id="@+id/btDot"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -212,7 +218,7 @@
         <Button
             android:id="@+id/btNumber0"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -223,7 +229,7 @@
         <Button
             android:id="@+id/buttonEquals"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
@@ -234,7 +240,7 @@
         <Button
             android:id="@+id/buttonPlus"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:textSize="30dp"
